Bug 159043 - Combo chart render order isn't right
Summary: Combo chart render order isn't right
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: kurt.nordback@protonmail.com
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2024-01-06 00:56 UTC by kurt.nordback@protonmail.com
Modified: 2025-01-02 20:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Showing rendering of MSO-created and LO-created combos (10.74 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-01-06 00:58 UTC, kurt.nordback@protonmail.com
Details
Sample compared before and after the fix (88.07 KB, image/png)
2025-01-02 20:42 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kurt.nordback@protonmail.com 2024-01-06 00:56:45 UTC
Description:
Column-and-line ("combo" in MSO terminology) charts appear to be rendered in the order in which their constituent sub-charts appear in the OOXML. This doesn't cause a problem with LO-generated charts (since they are output with column first, line second, as generally desired), it can result in undesirable rendering of MSO-generated charts where (thin) lines are obscured by (wide) columns. Probably the best approach is to mimic MSO and order the rendering by type, rather than order in the OOXML.  

Steps to Reproduce:
1. Create column + line combo chart in MSO
2. Save and view in LO


Actual Results:
Line chart is rendered first, column chart rendered second, potentially obscuring significant portions of the line

Expected Results:
The line is rendered above the column chart, to make it more visible


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 69084d8e279dd42355bead9378e5a01c7bec036b
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 kurt.nordback@protonmail.com 2024-01-06 00:58:02 UTC
Created attachment 191784 [details]
Showing rendering of MSO-created and LO-created combos
Comment 2 Julien Nabet 2024-01-06 17:08:29 UTC
I noticed you assigned yourself, do you plan to work on a fix?
Comment 3 kurt.nordback@protonmail.com 2024-01-06 17:11:48 UTC
Yes, I'm working on a fix. This is part of expanding support for combo charts more generally in LO.
Comment 4 Julien Nabet 2024-01-06 17:14:10 UTC
Ok let's put this one to ASSIGNED then.
Comment 5 kurt.nordback@protonmail.com 2024-01-09 21:47:24 UTC
Proposed fix submitted here: https://gerrit.libreoffice.org/c/core/+/161797
Comment 6 Commit Notification 2024-01-12 06:55:13 UTC
Kurt Nordback committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca3112f38ea67d3cff1c9784adcc30ffcb200a0a

tdf#159043: combo chart render order isn't right

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2024-02-03 18:01:10 UTC
Can this be closed as fixed?
Comment 8 kurt.nordback@protonmail.com 2024-02-03 18:09:25 UTC
I believe so, but I'm not sure if I'm allowed to make that change to the bug.
Comment 9 Buovjaga 2024-02-03 18:32:47 UTC
(In reply to kurt.nordback@protonmail.com from comment #8)
> I believe so, but I'm not sure if I'm allowed to make that change to the bug.

Fixing developers are the primary ones marking reports as resolved fixed.
Comment 10 kurt.nordback@protonmail.com 2024-02-03 18:38:50 UTC
Ah, okay. Still learning the processes.
Comment 11 Timur 2025-01-02 20:42:31 UTC
Created attachment 198361 [details]
Sample compared before and after the fix