tdf#159043: combo chart render order isn't right

Change-Id: If20446c8bd5a67f73c24444126c26ed6bd160aed
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161797
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>